统一调整client参数

--- a/conf/node.yml
+++ b/conf/node.yml
@@ -133,20 +133,20 @@ engineTypes:
     -
         typeName: flink150
         clusterMode: yarn
-        flinkZkAddress: kudu1:2181,kudu2:2181,kudu3:2181
+        flinkZkAddress: node01:2181,node02:2181,node03:2181
         #简化为只配置/flink150/ha
-        flinkHighAvailabilityStorageDir: hdfs://ns1/flink150/ha
-        flinkZkNamespace: /flink150
+        flinkHighAvailabilityStorageDir: hdfs://ns1/flink155_1/ha
+        flinkZkNamespace: /flink155_1
         jarTmpDir: ../tmp150
-        flinkPluginRoot: /opt/dtstack/flinkplugin
-        remotePluginRootDir: /opt/dtstack/flinkplugin
+        flinkPluginRoot: D:\flinkplugin
+        remotePluginRootDir: /opt/dtstack/150_flinkplugin
         #新增配置
-        flinkYarnMode:  new # flinkOnYarn 三种模式： new、legacy、per_job
+        flinkYarnMode: PER_JOB # flinkOnYarn 三种模式： new、legacy、per_job
         #new
-        flinkYarnNewModeMaxSlots: 4
+        #flinkYarnNewModeMaxSlots: 4
         #perjob
-        flinkConfigDir: /opt/dtstack/flink-1.5.0/conf
-        flinkJarPath: /opt/dtstack/flink-1.5.0/lib/flink-dist_2.11-1.5.0.jar
+        #flinkConfigDir: /opt/dtstack/flink-1.5.0/conf
+        flinkJarPath: D:\flink154
         flinkJobHistory: http://node01:8082
 
 
