--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "dependencies": {
     "@types/lodash": "^4.14.118",
+    "@types/prop-types": "^15.5.6",
     "antd": "2.13.14",
     "codemirror": "5.25.0",
     "d3-selection": "1.1.0",
@@ -17,10 +18,10 @@
     "moment": "2.18.1",
     "monaco-editor": "0.13.1",
     "object-assign": "4.1.1",
-    "prop-types": "15.5.8",
-    "react": "15.6.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
     "react-copy-to-clipboard": "5.0.0",
-    "react-dom": "15.6.2",
+    "react-dom": "^16.6.3",
     "react-redux": "5.0.4",
     "react-router": "3.0.4",
     "react-router-redux": "4.0.8",
@@ -48,7 +49,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
-    "eslint": "3.19.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-import": "^2.7.0",
