--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -10,6 +10,7 @@
             "widgets/*": ["./src/widgets/*"], // 工具文件夹
             "consts/*": ["./src/consts/*"], // 工具文件夹
             "funcs/*": ["./src/funcs/*"], // 零碎的公共方法，抽象成工具类的则移至utils目录
+            "funcs": ["./src/funcs"], // 工具文件夹
             "public/*": ["./src/public/*"], // 公共资源
             "config/*": ["./src/config/*"], // 数据文件，后期可能替换为借口
           }
