--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -5,7 +5,6 @@
   "main": "src/app.js",
   "dependencies": {
     "@types/lodash": "^4.14.118",
-    "@types/prop-types": "^15.5.6",
     "antd": "2.13.14",
     "codemirror": "5.25.0",
     "d3-selection": "1.1.0",
@@ -25,7 +24,7 @@
     "react-redux": "5.0.4",
     "react-router": "3.0.4",
     "react-router-redux": "4.0.8",
-    "react-split-pane": "0.1.61",
+    "react-split-pane": "^0.1.84",
     "redux": "3.6.0",
     "redux-logger": "3.0.1",
     "redux-thunk": "2.2.0",
@@ -33,18 +32,21 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
     "babel-eslint": "7.2.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "1.1.1",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.13.2",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.22.0",
-    "babel-preset-stage-2": "6.13.0",
     "cache-loader": "1.1.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
