--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -71,6 +71,7 @@
     "sass-loader": "^7.0.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "^1.0.1",
     "utils-merge": "1.0.1",
     "webpack": "^4.18.1",
