--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -12,9 +12,9 @@
     "dt-sql-parser": "^1.1.7",
     "echarts": "3.8.5",
     "history": "4.6.1",
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
     "mirror-creator": "1.1.0",
-    "moment": "2.18.1",
+    "moment": "2.22.2",
     "monaco-editor": "0.13.1",
     "object-assign": "4.1.1",
     "prop-types": "15.5.8",
@@ -40,10 +40,10 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.13.2",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-0": "6.22.0",
-    "babel-preset-stage-2": "6.13.0",
+    "babel-preset-stage-2": "6.24.1",
     "cache-loader": "1.1.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
@@ -58,20 +58,20 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
-    "less": "^2.7.0",
+    "less": "3.8.1",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "0.11.4",
     "mini-css-extract-plugin": "0.4.1",
     "monaco-editor-webpack-plugin": "~1.4.0",
     "node-notifier": "^5.2.1",
-    "node-sass": "4.9.2",
+    "node-sass": "4.11.0",
     "postcss-loader": "0.9.1",
     "progress-bar-webpack-plugin": "1.11.0",
     "react-hot-loader": "3.1.1",
     "sass-loader": "^7.0.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "2.0.1",
+    "uglifyjs-webpack-plugin": "1.0.0",
     "url-loader": "^1.0.1",
     "utils-merge": "1.0.1",
     "webpack": "^4.18.1",
