--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-stack-web",
-  "version": "3.1.0-beta",
+  "version": "3.0.0-next",
   "description": "Makes data valuable.",
   "main": "src/app.js",
   "dependencies": {
