--- a/engine-ui/packages/console-ui/.eslintrc.json
+++ b/engine-ui/packages/console-ui/.eslintrc.json
@@ -1,24 +1,40 @@
 {
     "parser": "babel-eslint",
-    "extends": "eslint-config-airbnb",
-    "plugins": ["react"],
+    "extends":["standard", "plugin:react/recommended"],
+    "plugins": [ 
+        "import",
+        "react",
+        "jsx-a11y"
+    ],
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "es6": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 8,
+        "sourceType": "module"
     },
     "rules": {
         "semi": 0,
         "strict": 0,
-        "react/prop-types": [0, {"ignore": ["children"]}],
-        "react/jsx-indent": 0,
         "indent": [2, 4],
-        "react/jsx-closing-bracket-location": 0,
-        "jsx-a11y/no-static-element-interactions": 0,
         "arrow-body-style": 0,
+        "no-return-assign": 0,
+        "no-useless-constructor": 0,
+        "eqeqeq": 0,
         "no-console": 0,
         "no-param-reassign": 0,
+        "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}],
+        
+        "react/jsx-indent": 0,
         "react/sort-comp": 0,
+        "react/jsx-uses-react": 1,
         "react/prefer-stateless-function": 0,
+        "react/jsx-closing-bracket-location": 0,
+        "jsx-a11y/no-static-element-interactions": 0,
+        "react/prop-types": [0, {"ignore": ["children"]}],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
