--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -12,9 +12,9 @@
     "dt-sql-parser": "^1.1.7",
     "echarts": "3.8.5",
     "history": "4.6.1",
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
     "mirror-creator": "1.1.0",
-    "moment": "2.18.1",
+    "moment": "2.22.2",
     "monaco-editor": "0.13.1",
     "object-assign": "4.1.1",
     "prop-types": "^15.6.2",
@@ -43,7 +43,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-stage-2": "^7.0.0",
-    "babel-eslint": "7.2.1",
+    "babel-eslint": "7.2.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -51,17 +51,20 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb": "14.1.0",
+    "eslint": "5.9.0",
+    "eslint-config-standard": "12.0.0",
     "eslint-loader": "1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-node": "8.0.0",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-standard": "4.0.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
-    "less": "^2.7.0",
+    "less": "3.8.1",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "0.11.4",
     "mini-css-extract-plugin": "0.4.1",
