--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -56,10 +56,12 @@
     "eslint-config-standard": "12.0.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "22.0.1",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-sort-requires": "2.1.0",
     "eslint-plugin-standard": "4.0.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -77,6 +79,7 @@
     "sass-loader": "^7.0.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
+    "stylelint-config-standard": "18.2.0",
     "uglifyjs-webpack-plugin": "1.0.0",
     "url-loader": "^1.0.1",
     "utils-merge": "1.0.1",
