--- a/engine-ui/packages/console-ui/.eslintignore
+++ b/engine-ui/packages/console-ui/.eslintignore
@@ -1,2 +1,19 @@
+dist/
+node_modules/
+bower_components/
+src/app/.idea/
+.cache-loader/
+.DS_Store
+.cache-loader/
+.idea/
+.env
+.vscode
+.history
+npm-error.log
+npm-debug.log
+debug.log
+yarn-error.log
+build/config
+package-lock.json
 src/widgets/editor
 src/widgets/code-editor
