--- a/engine-ui/packages/console-ui/.eslintrc.json
+++ b/engine-ui/packages/console-ui/.eslintrc.json
@@ -21,7 +21,7 @@
     "rules": {
         "semi": 0,
         "strict": 0,
-        "indent": [2, 4],
+        "indent": [2, 4, { "SwitchCase": 2 }],
         "arrow-body-style": 0,
         "no-return-assign": 0,
         "no-useless-constructor": 0,
@@ -37,6 +37,6 @@
         "react/jsx-closing-bracket-location": 0,
         "jsx-a11y/no-static-element-interactions": 0,
         "react/prop-types": [0, {"ignore": ["children"]}],
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     }
 }
