--- a/engine-ui/packages/console-ui/.eslintrc.json
+++ b/engine-ui/packages/console-ui/.eslintrc.json
@@ -30,7 +30,7 @@
         "no-param-reassign": 0,
         "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}],
-        
+        "react/display-name":[0],
         "react/sort-comp": 0,
         "react/jsx-uses-react": 1,
         "react/prefer-stateless-function": 0,
