--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-stack-web",
-  "version": "3.1.0-next",
+  "version": "3.2.0-beta",
   "description": "Making data valuable.",
   "main": "src/app.js",
   "dependencies": {
