docs(Application doc description.): Changed App desc
Change App description and added eslint ignore path

fix #12009

--- a/engine-ui/packages/console-ui/.eslintignore
+++ b/engine-ui/packages/console-ui/.eslintignore
@@ -13,7 +13,7 @@ npm-error.log
 npm-debug.log
 debug.log
 yarn-error.log
-build/config
+build
 package-lock.json
 src/widgets/editor
 src/widgets/code-editor
