--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -99,7 +99,9 @@
     "ssh": "./scripts/ssh_server.sh",
     "hotfix": "./scripts/hotfix.sh --b",
     "scp": "./scripts/scp.sh",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "lint": "eslint ./src/**/*.js --fix",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
+    "postchangelog": "replace 'http://git.dtstack.cn/ziv/data-stack-web/issues/' 'http://redmine.prod.dtstack.cn/issues/' CHANGELOG.md"
   },
   "keywords": [
     "generator",
@@ -109,7 +111,7 @@
     "node": ">=8.9.4"
   },
   "repository": "http://git.dtstack.cn/ziv/data-stack-web",
-  "repoUrl": "http://git.dtstack.cn/ziv/data-stack-web",
+  "bugs": "http://redmine.prod.dtstack.cn/issues/",
   "author": "Ziv",
   "license": "MIT"
 }
