add commitlint and husky

--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -67,9 +67,9 @@
     "eslint-plugin-standard": "4.0.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "git-hooks": "1.1.10",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "husky": "1.2.0",
     "less": "3.8.1",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "0.11.4",
