--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -47,6 +47,8 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "@commitlint/cli": "7.2.1",
+    "@commitlint/config-angular": "7.1.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-loader": "1.7.1",
@@ -57,6 +59,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "husky": "1.2.0",
     "less": "^2.7.0",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "0.11.4",
@@ -84,10 +87,31 @@
     "build": "npm install && rm -rf dist/* && webpack --profile --color --progress --config build/prod.js",
     "mock": "cup config",
     "test": "test",
-    "release": "./scripts/build.sh",
+    "release": "./scripts/release.sh",
     "ssh": "./scripts/ssh_server.sh",
     "hotfix": "./scripts/hotfix.sh --b",
-    "scp": "./scripts/scp.sh"
+    "scp": "./scripts/scp.sh",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md && npm run changeissueurl",
+    "changeissueurl": "replace 'http://git.dtstack.cn/ziv/data-stack-web/issues/' 'http://redmine.prod.dtstack.cn/issues/' CHANGELOG.md"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -c ./commitlint.config.js -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "standard-version": {
+    "scripts": {
+      "postchangelog": "npm run changeissueurl"
+    }
+  },
+  "repository": "http://git.dtstack.cn/ziv/data-stack-web",
+  "bugs": {
+    "url": "http://redmine.prod.dtstack.cn/issues/"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "keywords": [
     "generator",
@@ -96,6 +120,5 @@
   "engines": {
     "node": ">=8.9.4"
   },
-  "author": "Ziv",
   "license": "MIT"
 }
