修改工程的依赖版本（设置统一调用最上层的版本号）

--- a/base/plugin/rdbs/hive/pom.xml
+++ b/base/plugin/rdbs/hive/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base.rdbs</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.rdbs.common</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
