--- a/base/common/pom.xml
+++ b/base/common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.dtstack.rdos</groupId>
 		<artifactId>engine</artifactId>
-		<version>1.0.0</version>
+		<version>${revision}</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>base.common</artifactId>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>common</artifactId>
-			<version>1.0.0</version>
+			<version>${revision}</version>
 		</dependency>
 
 		<dependency>
