--- a/base/plugin/flink130/pom.xml
+++ b/base/plugin/flink130/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.dtstack.rdos</groupId>
-    <artifactId>engine</artifactId>
-    <version>1.0.0</version>
+      <groupId>com.dtstack.rdos</groupId>
+      <artifactId>engine</artifactId>
+	  <version>${revision}</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
   <artifactId>base.flink130</artifactId>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>base.common</artifactId>
-			<version>1.0.0</version>
+			<version>${revision}</version>
 	        <scope>provided</scope>
 		</dependency>
 
