--- a/base/plugin/flink150/pom.xml
+++ b/base/plugin/flink150/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.dtstack.rdos</groupId>
         <artifactId>engine</artifactId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <artifactId>base.flink150</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
             <scope>provided</scope>
         </dependency>
 
