--- a/base/plugin/learning/learning-core/pom.xml
+++ b/base/plugin/learning/learning-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base.learning</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
