--- a/base/plugin/spark/sql-proxy/pom.xml
+++ b/base/plugin/spark/sql-proxy/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.dtstack.rdos</groupId>
     <artifactId>base.spark</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>sql-proxy</artifactId>
