--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,9 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.dtstack.rdos</groupId>
-    <artifactId>engine</artifactId>
-    <version>1.0.0</version>
+	  <groupId>com.dtstack.rdos</groupId>
+	  <artifactId>engine</artifactId>
+	  <version>${revision}</version>
+      <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>service</artifactId>
   <name>service</name>
@@ -76,7 +77,7 @@
 		<dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>base.common</artifactId>
-			<version>1.0.0</version>
+			<version>${revision}</version>
 		</dependency>
   </dependencies>
 </project>
