--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,7 @@
 	<name>common</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <hadoop.version>2.7.3</hadoop.version>
 	</properties>
 
 	<build>
@@ -50,49 +51,41 @@
 			<version>2.0.6</version>
 		</dependency>
 
-		<!--<dependency>
-		<groupId>org.apache.hadoop</groupId>
-		<artifactId>hadoop-common</artifactId>
-		<version>2.7.3</version>
-		<exclusions>
-		<exclusion>
-		<artifactId>slf4j-log4j12</artifactId>
-		<groupId>org.slf4j</groupId>
-		</exclusion>
-		<exclusion>
-		<artifactId>log4j</artifactId>
-		<groupId>log4j</groupId>
-		</exclusion>
-		</exclusions>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>xml-apis</artifactId>
+					<groupId>xml-apis</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
-		<groupId>org.apache.hadoop</groupId>
-		<artifactId>hadoop-client</artifactId>
-		<version>2.7.3</version>
-		<exclusions>
-		<exclusion>
-		<artifactId>slf4j-log4j12</artifactId>
-		<groupId>org.slf4j</groupId>
-		</exclusion>
-		<exclusion>
-		<artifactId>log4j</artifactId>
-		<groupId>log4j</groupId>
-		</exclusion>
-		</exclusions>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
-		<dependency>
-		<groupId>org.apache.hadoop</groupId>
-		<artifactId>hadoop-confHdfsPath</artifactId>
-		<version>2.7.3</version>
-		<exclusions>
-		<exclusion>
-		<artifactId>log4j</artifactId>
-		<groupId>log4j</groupId>
-		</exclusion>
-		</exclusions>
-		</dependency>-->
 
 		<dependency>
 			<groupId>ch.ethz.ganymed</groupId>
